@@ -62,7 +62,24 @@ AC_CHECK_LIB(m, pow, LIBS="-lm $LIBS",)
 
 dnl Checks for header files.
 AC_HEADER_DIRENT
-AC_CHECK_HEADERS(arpa/inet.h net/if.h sys/time.h sys/fcntl.h fcntl.h sys/file.h sys/syslimits.h netinet/in_systm.h sys/in_systm.h netdb.h sys/un.h sys/filio.h regex.h resolv.h arpa/nameser.h dirent.h sys/ndir.h sys/dir.h ndir.h)
+AC_CHECK_HEADERS([sys/socket.h sys/time.h sys/fcntl.h fcntl.h sys/file.h netinet/in.h netdb.h sys/un.h sys/filio.h regex.h arpa/nameser.h dirent.h sys/ndir.h sys/dir.h ndir.h])
+
+AC_CHECK_HEADERS([net/if.h], [], [],
+[AC_INCLUDES_DEFAULT
+#ifdef HAVE_SYS_SOCKET_H
+#include <sys/socket.h>
+#endif
+])
+
+AC_CHECK_HEADERS([arpa/inet.h resolv.h], [], [],
+[AC_INCLUDES_DEFAULT
+#ifdef HAVE_NETINET_IN_H
+#include <netinet/in.h>
+#endif
+#ifdef HAVE_ARPA_NAMESER_H
+#include <arpa/nameser.h>
+#endif
+])
 
 dnl Checks for declarations.
 AC_CHECK_DECLARATION(stpcpy, stpcpy, stpcpy, string.h, STPCPY_DECLARED)
