@@ -1,5 +1,8 @@
 [Changes 1.2c01]
 
+* configure - use the right dependencies when checking for net/if.h, i
+  arpa/inet.h and resolv.h. Reported by flashback. (caf)
+
 * Fix plugin Makefiles for out-of-tree building, reported by nyet. (caf)
 
 * Add DESTDIR support to build system, to ease rpm and deb packaging.
